add project structure to readme
