# src/controllers/orders.controller.ts
@@ -73,33 +73,11 @@ class OrdersController {
     }
   };
 
-  public getAssignedOrders = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-    try {
-      const riderId = Number(req.query.riderId);
-      const findAssignedOrdersData: Order[] = await this.orderService.findAssignedOrders(riderId);
-
-      res.status(200).json({ data: findAssignedOrdersData, message: 'Assigned orders retrieved' });
-    } catch (error) {
-      next(error);
-    }
-  };
-
   public getPendingOrders = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
     try {
       const findPendingOrdersData: Order[] = await this.orderService.findPendingOrders();
 
       res.status(200).json({ data: findPendingOrdersData, message: 'Pending orders retrieved' });
-    } catch (error) {
-      next(error);
-    }
-  };
-
-  public getOrderForLogistics = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-    try {
-      const orderId = Number(req.params.orderId);
-      const findOrderForLogisticsData: Order = await this.orderService.findOrderForLogistics(orderId);
-
-      res.status(200).json({ data: findOrderForLogisticsData, message: 'Order information retrieved for logistics' });
     } catch (error) {
       next(error);
     }
