# src/routes/orders.route.ts
@@ -21,7 +21,6 @@ class OrdersRoute implements Routes {
     this.router.put(`${this.path}/:id(\\d+)`, authMiddleware, validationMiddleware(CreateOrderDto, 'body', true), this.ordersController.updateOrder);
     this.router.delete(`${this.path}/:id(\\d+)`, authMiddleware, this.ordersController.deleteOrder);
     this.router.put(`${this.path}/:id(\\d+)/status`, authMiddleware, this.ordersController.updateOrderStatus);
-    this.router.put(`${this.path}/:id(\\d+)`, authMiddleware, validationMiddleware(CreateOrderDto, 'body', true), this.ordersController.updateOrder);
   }
 }
 
